--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_gravity="center"
+    android:layout_height="fill_parent"
     tools:context=".PageFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,4 +13,10 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
-</FrameLayout>
+    <VideoView android:id="@+id/video_thumb"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center|center_vertical">
+    </VideoView>
+
+</FrameLayout >
