Версия 21 Работа над переносом файла на сд карту Фикс запроса разрешений

--- a/app/src/main/res/layout/dialog_save_sd_card.xml
+++ b/app/src/main/res/layout/dialog_save_sd_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/save_dialog_layout"
     android:layout_width="450dp"
     android:layout_height="280dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -32,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal" >
 
         <ImageButton
