--- a/app/src/main/res/layout/activity_gallery2.xml
+++ b/app/src/main/res/layout/activity_gallery2.xml
@@ -10,7 +10,9 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+    </androidx.viewpager.widget.ViewPager>
 
     <ImageButton
         android:id="@+id/open_camera"
@@ -46,28 +48,6 @@
         android:src="@drawable/asset5"/>
 
     <ImageButton
-        android:id="@+id/btn_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="250dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:background="@null"
-
-        android:src="@drawable/asset66"/>
-
-    <ImageButton
-        android:id="@+id/btn_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="250dp"
-        android:layout_marginBottom="10dp"
-        android:background="@null"
-        android:src="@drawable/asset6" />
-
-    <ImageButton
         android:id="@+id/save_sd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -77,5 +57,30 @@
         android:background="@null"
         android:layout_margin="10dp"
         android:src="@drawable/asset8"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/btn_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30dp"
+            android:background="@null"
+            android:src="@drawable/asset6" />
+
+        <ImageButton
+            android:id="@+id/btn_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+
+            android:src="@drawable/asset66" />
+    </LinearLayout>
 
 </RelativeLayout>
