--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
 
 <!--    </LinearLayout>-->
 
-    <com.example.mycameraapp.AutoFitTextureView
+    <com.example.mycameraapp.AutoFillTextureView
         android:id="@+id/textureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
