--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -19,4 +19,12 @@
         android:layout_gravity="center|center_vertical">
     </VideoView>
 
+    <ImageView
+        android:id="@+id/mPlayVideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|center_vertical"
+        android:src="@drawable/ic_play_button"
+        android:visibility="gone" />
+
 </FrameLayout >
