Добавлены изменения работы кнопок

--- a/app/src/main/res/layout/activity_gallery2.xml
+++ b/app/src/main/res/layout/activity_gallery2.xml
@@ -10,9 +10,9 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="match_parent" >
+
+    </androidx.viewpager.widget.ViewPager>
 
     <ImageButton
         android:id="@+id/open_camera"
@@ -21,9 +21,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="@null"
-        android:layout_margin="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="30dp"
         android:text="Right Top"
-        android:src="@drawable/asset14"/>
+        android:src="@drawable/asset14_press"/>
 
     <ImageButton
         android:id="@+id/make_shot"
@@ -44,27 +45,7 @@
         android:layout_alignParentBottom="true"
         android:background="@null"
         android:layout_margin="10dp"
-        android:src="@drawable/asset5"/>
-
-    <ImageButton
-        android:id="@+id/btn_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="250dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:background="@null"
-
-        android:src="@drawable/asset66"/>
-
-    <ImageButton
-        android:id="@+id/btn_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="250dp"
-        android:background="@null"
-        android:src="@drawable/asset6" />
+        android:src="@drawable/asset5_press"/>
 
     <ImageButton
         android:id="@+id/save_sd"
@@ -75,6 +56,30 @@
         android:text="Right Bottom"
         android:background="@null"
         android:layout_margin="10dp"
-        android:src="@drawable/asset8"/>
+        android:src="@drawable/asset8_press"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/btn_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30dp"
+            android:background="@null"
+            android:src="@drawable/asset6_press" />
+
+        <ImageButton
+            android:id="@+id/btn_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:src="@drawable/asset66_press" />
+    </LinearLayout>
 
 </RelativeLayout>
