--- a/app/src/main/res/drawable/asset12_press.xml
+++ b/app/src/main/res/drawable/asset12_press.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:drawable="@drawable/asset12_pressed" /> <!-- pressed -->
-    <item android:drawable="@drawable/asset12" /> <!-- default -->
+        android:drawable="@drawable/camera_diaphragm_pressed" /> <!-- pressed -->
+    <item android:drawable="@drawable/camera_diaphragm" /> <!-- default -->
 </selector>
