--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true" />
 
 <!--    <ImageButton-->
 <!--        android:layout_width="wrap_content"-->
@@ -97,8 +97,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="@null"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_margin="30dp"
         android:text="Right Top"
         android:src="@drawable/asset11_press"/>
 
@@ -110,18 +109,18 @@
         android:layout_alignParentRight="true"
         android:text="Center"
         android:background="@null"
-        android:layout_margin="10dp"
+        android:layout_marginRight="30dp"
         android:src="@drawable/asset12_press"/>
 
     <ImageButton
         android:id="@+id/change_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:layout_margin="30dp"
         android:background="@null"
-        android:layout_margin="10dp"
-        android:src="@drawable/asset101_press"/>
+        android:src="@drawable/asset10_press"/>
 
     <ImageButton
         android:id="@+id/open_video"
@@ -131,7 +130,7 @@
         android:layout_alignParentBottom="true"
         android:text="Right Bottom"
         android:background="@null"
-        android:layout_margin="10dp"
+        android:layout_margin="30dp"
         android:src="@drawable/asset9_press"/>
 
 
