--- a/app/src/main/res/layout/dialog_save_sd_card.xml
+++ b/app/src/main/res/layout/dialog_save_sd_card.xml
@@ -4,36 +4,31 @@
     android:layout_width="450dp"
     android:layout_height="280dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/asset4"
+    android:background="@drawable/media_to_sd"
     android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/txt_dia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:text="Save to SD Card"
+        android:layout_marginTop="130dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:gravity="center_horizontal"
+        android:text="@string/dialog_sd_card_message"
         android:textColor="@android:color/white"
-        android:textSize="35dp"
+        android:textSize="25dp"
         android:textStyle="bold"/>
-
-    <TextView
-        android:layout_height="100dp"
-        android:layout_width="300dp"
-        android:layout_gravity="center"
-        android:layout_margin="20dp"
-        android:background="#ffffff"
-        android:textColor="#000000"
-        android:text="Move all files from phone to SD card. They will still be available through the Gallery. "
-        />
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="15dp"
         android:orientation="horizontal" >
 
         <ImageButton
@@ -41,16 +36,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:layout_marginRight="100dp"
-            android:src="@drawable/asset2"/>
+            android:layout_marginRight="50dp"
+            android:src="@drawable/cancel_button"/>
 
         <ImageButton
             android:id="@+id/btn_yes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:layout_marginLeft="100dp"
-            android:src="@drawable/asset3"/>
+            android:layout_marginLeft="50dp"
+            android:src="@drawable/ok_button"/>
 
     </LinearLayout>
 </LinearLayout>
