--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,20 +63,22 @@
 
 <!--    </LinearLayout>-->
 
-    <com.example.mycameraapp.AutoFillTextureView
-        android:id="@+id/textureView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
-
-<!--    <ImageButton-->
+    <!--    <ImageButton-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
 <!--        android:layout_alignParentLeft="true"-->
 <!--        android:layout_alignParentTop="true"-->
 <!--        android:text="Left Top"-->
 <!--        android:src="@drawable/ic_camera_alt_black_24dp"/>-->
+
+    <com.example.mycameraapp.AutoFillTextureView
+        android:id="@+id/textureView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-3dp"
+        android:layout_marginTop="2dp" />
 
     <TextView
         android:id="@+id/txt_timer"
@@ -92,46 +94,63 @@
 
     <ImageButton
         android:id="@+id/open_gallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
         android:background="@null"
-        android:layout_margin="30dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_photo_library"
         android:text="Right Top"
-        android:src="@drawable/asset11_press"/>
+        android:tint="@color/white" />
 
     <ImageButton
         android:id="@+id/make_shot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentRight="true"
-        android:text="Center"
-        android:background="@null"
+        android:layout_centerInParent="true"
         android:layout_marginRight="30dp"
-        android:src="@drawable/asset12_press"/>
+        android:background="@null"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_camera_diaphragm"
+        android:text="Center"
+        android:tint="@color/white" />
 
     <ImageButton
         android:id="@+id/change_camera"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
         android:background="@null"
-        android:src="@drawable/asset10_press"/>
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_switch_camera_button"
+        android:tint="@color/white" />
 
     <ImageButton
         android:id="@+id/open_video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:text="Right Bottom"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
         android:background="@null"
-        android:layout_margin="30dp"
-        android:src="@drawable/asset9_press"/>
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_videocam_filled_tool"
+        android:text="Right Bottom"
+        android:tint="@color/white" />
 
 
 
