--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -16,8 +16,8 @@
 
     <VideoView
         android:id="@+id/video_thumb"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center|center_vertical"></VideoView>
 
     <ImageButton
