--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,14 +71,14 @@
 <!--        android:text="Left Top"-->
 <!--        android:src="@drawable/ic_camera_alt_black_24dp"/>-->
 
-    <com.example.mycameraapp.AutoFillTextureView
+    <com.example.mycameraapp.AutoFitTextureView
         android:id="@+id/textureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="-3dp"
-        android:layout_marginTop="2dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center|center_horizontal|center_vertical"
+        android:layout_marginStart="0dp" />
 
     <TextView
         android:id="@+id/txt_timer"
